Bug #21054 myisam_stats_method ignored in my.cnf and cmdline
Submitted: 14 Jul 2006 1:53 Modified: 13 Sep 2006 19:50
Reporter: Kolbe Kegel
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1.19,5.0.22 OS:
Assigned to: Timothy Smith Target Version:
Tags: my.cnf, myisam_stats_method, myisam

[14 Jul 2006 1:53] Kolbe Kegel
Description:
The myisam_stats_method variable cannot be set in the my.cnf file or on the commandline.

How to repeat:
mysqld_safe --myisam-stats-method=nulls-equal &
mysqladmin variables | grep myisam_stats_method

kolbe@beluga:~/MySQL/inst/5.0.22> ./bin/mysqld_safe --myisam-stats-method=nulls_equal &

kolbe@beluga:~/MySQL/inst/5.0.22> ./bin/mysqladmin variables | grep myisam_stats
| myisam_stats_method             | nulls_unequal     |

Suggested fix:
This should be repaired in such a way that myisam_stats_method can again be set in the
my.cnf file or as a command line option to mysqld.
[6 Sep 2006 23:21] Timothy Smith
Calvin, Ingo:

I'm stealing this one.  Trivial fix included in bug.
[7 Sep 2006 0:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/11502

ChangeSet@1.2539, 2006-09-07 00:11:43+02:00, tsmith@maint1.mysql.com +1 -0
  Bug #21054: myisam_stats_method ignored in my.cnf and cmdline
  Fix OPT_MYISAM_STATS_METHOD case, where the NULLS_EQUAL and NULLS_NOT_EQUAL methods were
mixed up
[7 Sep 2006 18:42] Timothy Smith
A typo (actuall, mixed up two identifiers) in option handling in mysqld caused the
myisam_stats_method to be handled incorrectly - you'd ask for "nulls_equal" and get
"nulls_unequal", and vice versa.

Patch pushed to mysql-5.0-release.  Will be in 5.0.25.

Docs team: please set back to "Patch queued" after documenting for 5.0.

Patch queued to -maint team trees (4.1, 5.0 and 5.1).
[13 Sep 2006 4:29] Paul DuBois
Noted in 5.0.25 changelog.

The myisam_stats_method variable was mishandled when set from an option file or on the
command line.

Report set back to Patch Queued pending merge into 4.1, 5.1.
[13 Sep 2006 10:44] Timothy Smith
Pushed to 5.1.12 and 4.1.22.
[13 Sep 2006 19:50] Paul DuBois
Noted in 4.1.22, 5.1.12 changelogs.
[4 Oct 2006 15:57] Chad MILLER
Available in 4.1.22.